--- a/Movies_Website_Images_And_Video/index.html
+++ b/Movies_Website_Images_And_Video/index.html
@@ -7,7 +7,7 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Responsive Anime Website</title>
      <!-- Link To CSS -->
-     <link rel="stylesheet" href="css/style.css">
+     <link rel="stylesheet" href="style.css">
      <!--icono-->
      <link rel="shortcut icon" href="img/fav-icon.png" type="image/x-icon">
      <!--Box icons-->
@@ -16,7 +16,7 @@
  <body>
     <header>
         <!--NAV-->
-        <div class="nav conteiner">
+        <div class="nav container">
             <!--logo-->
             <a href="index.html" class="logo">
             Anime<span>ZB</span>
@@ -27,12 +27,40 @@
                 <i class='bx bx-search-alt'></i>
             </div>
             <!--usuario-->
-            <a href="#" class="user"></a>
+            <a href="#" class="user">
             <img src="img/user.jpg" alt="" class="user-img">
+            </a>
+            <!--NAVbar-->
+            <div class="navbar">
+                <a href="#home" class="nav-link nav-active">
+                    <i class='bx bx-home'></i> 
+                    <span class="nav-link-title">Home</span>
+                </a>
+                <a href="#home" class="nav-link">
+                    <i class='bx bxs-hot' ></i>
+                    <span class="nav-link-title">Trendings</span>
+                </a>
+                <a href="#home" class="nav-link">
+                    <i class='bx bx-compass' ></i>
+                    <span class="nav-link-title">Explore</span>
+                </a>
+                <a href="#home" class="nav-link">
+                    <i class='bx bxs-star' ></i>
+                    <span class="nav-link-title">Featured</span>
+                </a>
+                <a href="#home" class="nav-link">
+                    <i class='bx bx-heart' ></i>
+                    <span class="nav-link-title">Favourites</span>
+                </a>
+            </div>
         </div>
     </header>
+    <!--Home-->
+    <section class="home container" id="home">
+        <!--Hom e image-->
+        <img src="img/home-background.jpg" alt="" class="home-img">
+      <!--Hom text-->
+    </section>
 
     <!--link to js-->
     <script src="js/main.js"></script>
- </body>
- </html>
