--- a/AnimeWebsite/play-page.html
+++ b/AnimeWebsite/play-page.html
@@ -104,7 +104,38 @@
     <div class="cast">
         <div class="cast-box">
             <img src="play-page/cast1.jpg" alt="" class="cast-img">
+            <span class="cast-title">Shion Wakayama</span>
         </div>
+        <div class="cast-box">
+            <img src="play-page/cast2.jpg" alt="" class="cast-img">
+            <span class="cast-title">Natsuki Hanae</span>
+        </div>
+        <div class="cast-box">
+            <img src="play-page/cast3.jpg" alt="" class="cast-img">
+            <span class="cast-title">Ayane Sakura</span>
+        </div>
+        <div class="cast-box">
+            <img src="play-page/cast4.jpg" alt="" class="cast-img">
+            <span class="cast-title">Nana Mizuki</span>
+        </div>
+        <div class="cast-box">
+            <img src="play-page/cast5.jpg" alt="" class="cast-img">
+            <span class="cast-title">Kaito Ishikawa</span>
+        </div>
+        <div class="cast-box">
+            <img src="play-page/cast6.jpg" alt="" class="cast-img">
+            <span class="cast-title">Mayumi Tanaka</span>
+        </div>
+    </div>
+  </div>
+  <!--dowload-->
+  <div class="download">
+    <h2 class="download-title">Download Opening</h2>
+    <div class="dowload-links">
+        <a href="play-page/Dandadan op.mp4" download>480p</a>
+        <a href="play-page/Dandadan op.mp4" download>720p</a>
+        <a href="play-page/Dandadan op.mp4" download>1080p</a>
+
     </div>
   </div>
 <!--Copyrigth-->
