--- a/AnimeWebsite/index.html
+++ b/AnimeWebsite/index.html
@@ -93,7 +93,7 @@
                     <div class="box-text">
                         <h2 class="movie-title">One Piece</h2>
                         <span class="movietype">Shonen</span>
-                        <a href="#" class="watch-btn play-btn">
+                        <a href="play-pageOP.html" class="watch-btn play-btn">
                             <i class='bx bx-play-circle'></i>                 
                         </a>
                     </div>
@@ -106,7 +106,7 @@
                     <div class="box-text">
                         <h2 class="movie-title">Naruto</h2>
                         <span class="movietype">Shonen</span>
-                        <a href="#" class="watch-btn play-btn">
+                        <a href="play-page Naru.html" class="watch-btn play-btn">
                             <i class='bx bx-play-circle'></i>                 
                         </a>
                     </div>
@@ -221,7 +221,7 @@
             <div class="box-text">
                 <h2 class="movie-title">Saint Seiya</h2>
                 <span class="movietype">Shonen</span>
-                <a href="#" class="watch-btn play-btn">
+                <a href="play-page2.html" class="watch-btn play-btn">
                     <i class='bx bx-play-circle'></i>                 
                 </a>
             </div>
