--- a/AnimeWebsite/play-page.html
+++ b/AnimeWebsite/play-page.html
@@ -36,11 +36,11 @@
                     <i class='bx bx-home'></i> 
                     <span class="nav-link-title">Home</span>
                 </a>
-                <a href="#home" class="nav-link">
+                <a href="index.html#popular" class="nav-link">
                     <i class='bx bxs-hot' ></i>
                     <span class="nav-link-title">Trendings</span>
                 </a>
-                <a href="#home" class="nav-link">
+                <a href="index.html#movies" class="nav-link">
                     <i class='bx bx-compass' ></i>
                     <span class="nav-link-title">Explore</span>
                 </a>
